2006-06-22  Robert Schuster  <robertschuster@fsfe.org>

	* java/awt/Insets.java: Updated copyright year.
	(toString): Changed string, removed a line from the 
	documentation.

2006-06-22  Roman Kennke  <kennke@aicas.com>

	* javax/swing/text/AbstractDocument.java
	(AbstractDocument): Set the i18n document property.
	(removeImpl): Added checks for correct boundaries.

2006-06-22  Roman Kennke  <kennke@aicas.com>

	* javax/swing/text/PlainDocument.java
	(rootElement): Changed type to Element.
	(tabSize): Removed field. This is stored in the document properties
	instead.
	(PlainDocument): Set tabSize property. Init rootElement without
	cast.
	(insertUpdate): Rewritten. The previous implementation did not
	handle some corner cases properly and was a mess.
	(removeUpdate): Cast rootElement to BranchElement.

2006-06-22  David Gilbert  <david.gilbert@object-refinery.com>

	* javax/swing/plaf/basic/BasicLabelUI.java
	(installKeyboardActions): Implemented,
	(uninstallKeyboardActions): Implemented,
	(propertyChange): Add handling for 'displayedMnemonic' and 'labelFor'
	properties.

2006-06-22  Robert Schuster  <robertschuster@fsfe.org>

	* javax/swing/JMenu.java:
	(removeAll): Added check for popupMenu not being null.

2006-06-22  David Gilbert  <david.gilbert@object-refinery.com>

	* javax/swing/JLabel.java
	(getText): Updated API docs,
	(setText): Corrected the check for an unchanged value, and the update 
	of the displayedMnemonicIndex.

2006-06-22  David Gilbert  <david.gilbert@object-refinery.com>

	* javax/swing/JLabel.java
	(setDisplayedMnemonic(int)): Fire property change event AFTER updating 
	field,
	(setDisplayedMnemonicIndex): Modified argument checking to handle case
	where label text is null.

2006-06-22  David Gilbert  <david.gilbert@object-refinery.com>

	* javax/swing/JLabel.java
	(setDisplayedMnemonic): Updated API docs,
	(getDisplayedMnemonic): Removed unnecessary type-cast,
	(setDisplayedMnemonicIndex): Removed unnecessary validation, 